백그라운드로 이미지 처리해서 setinterval

--- a/banner.html
+++ b/banner.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .bannerwrap{
+            height: 550px;
+            transition: 0.5s;
+            position: relative;
+        }
+        .bannerwrap button{
+            position: absolute;
+            width: 35px; height: 35px;
+            top: 0; bottom: 0; left: 0; right: 0;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
-    
-    <img src="./banner/3.png" alt="" id="bannerimg">
+    <h2>배경으로 변경</h2>
+    <div class="bannerwrap">
+        <button>stop</button>
+    </div>
 
-    <script src="./setinterval.js"></script>
+    <h2>이미지태그의 속성 변경</h2>
+    <img src="/banner/3.png" alt="" id="bannerimg">
+
+    <script src="/setinterval.js"></script>
 </body>
 </html>
